# NBodyProblem

./: CMakeLists.txt  README.md  body.h  functions.cpp  header.h  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
